fixing a small visibility-bug before taking a break

--- a/assets/css/summary--proxy.css
+++ b/assets/css/summary--proxy.css
@@ -21,6 +21,7 @@
 .join-360 {
     display: flex;
     flex-direction: column;
+    align-self: baseline;
     gap: 16px;
     padding-bottom: 16px;
     position: relative;
@@ -59,7 +60,7 @@
     color: #29ABE2;
 }
 
-.summary-animation {
+.summary-content {
     opacity: 0;
     transition: opacity 1s ease-in-out;
 }
@@ -205,7 +206,7 @@
 
 .summary-bottom {
     display: flex;
-    gap: 24px;
+    gap: 16px;
     width: 100%;
     height: 34%;
     justify-content: center;
@@ -225,8 +226,20 @@
     }
 }
 
+@media (min-width: 430px) and (max-width: 820px) {
+    .summary {
+        width: 396px;
+    }
+
+    .summary-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
 @media (min-width: 820px) {
-    .summary-animation {
+    .summary-content {
         opacity: 1;
     }
 
